--- a/MegaCityOne.Mvc.Example/packages.config
+++ b/MegaCityOne.Mvc.Example/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.2" targetFramework="net45" />
+  <package id="Jint" version="2.4.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="MegaCityOne" version="2.0.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
