--- a/MegaCityOne.Mvc/MegaCityOne.Mvc.csproj
+++ b/MegaCityOne.Mvc/MegaCityOne.Mvc.csproj
@@ -39,8 +39,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\MegaCityOne.2.0.2.0\lib\net45\MegaCityOne.dll</HintPath>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -53,9 +57,10 @@
     <Compile Include="JudgeAuthorizeAttribute.cs" />
     <Compile Include="JudgeDispatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecuritySession.cs" />
     <Compile Include="SummonDelegate.cs" />
     <Compile Include="SummonEventArgs.cs" />
-    <Compile Include="UserData.cs" />
+    <Compile Include="UserInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
