--- a/MegaCityOne.Mvc/packages.config
+++ b/MegaCityOne.Mvc/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
 </packages>
