Corrected a lot of issues in in the example proj.
updated the package to configure MegaCityOne upon installation

--- a/MegaCityOne.Mvc.Example/MegaCityOne.Mvc.Example.csproj
+++ b/MegaCityOne.Mvc.Example/MegaCityOne.Mvc.Example.csproj
@@ -140,7 +140,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
-    <Compile Include="App_Start\JudgeConfig.cs" />
+    <Compile Include="App_Start\MegaCityOneActivator.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
