--- a/MegaCityOne.Mvc.Example/Views/Web.config
+++ b/MegaCityOne.Mvc.Example/Views/Web.config
@@ -17,7 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="MegaCityOne.Example.Mvc" />
+        <add namespace="MegaCityOne.Mvc.Example" />
+        <add namespace="MegaCityOne.Mvc" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
