--- a/MegaCityOne.Mvc/MegaCityOne.Mvc.nuspec
+++ b/MegaCityOne.Mvc/MegaCityOne.Mvc.nuspec
@@ -14,8 +14,16 @@
     <summary>
       The MVC 5 integration for MegaCityOne security.
     </summary>
-    <releaseNotes>Added support for HttpContext in McoSession class</releaseNotes>
+    <releaseNotes>Introduced dependency range specifications in the nuspec file.</releaseNotes>
     <copyright>Copyright 2015 formix.org</copyright>
     <tags>Security, Authorization, MVC</tags>
+    <dependencies>
+      <dependency id="NLog" version="[3.0.0,)" />
+      <dependency id="MegaCityOne" version="[2.0.0,)" />
+      <dependency id="Microsoft.AspNet.Mvc" version="[5.0.0,)" />
+      <dependency id="Microsoft.AspNet.Razor" version="[3.0.0,)" />
+      <dependency id="Microsoft.AspNet.WebPages" version="[3.0.0,)" />
+      <dependency id="Microsoft.Web.Infrastructure" version="[1.0.0.0,)" />
+    </dependencies>
   </metadata>
 </package>
