--- a/MegaCityOne.Mvc/MegaCityOne.Mvc.csproj
+++ b/MegaCityOne.Mvc/MegaCityOne.Mvc.csproj
@@ -63,6 +63,7 @@
     <Content Include="App_Start\MegaCityOneActivator.cs.pp" />
     <Compile Include="McoAuthenticateAttribute.cs" />
     <Compile Include="JudgeAuthorizeAttribute.cs" />
+    <Compile Include="JudgeDispatcher.cs" />
     <Compile Include="McoDispatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="McoSession.cs" />
